--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,9 @@ dependencies {
 
     def room_version = "2.5.2"
 
-    implementation 'com.google.code.gson:gson:2.8.8'
+//    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
